Changes for 1.8.9rc1

 - [ZBX-4131] fixed incorrect page shown after login (Vedmak)
 - [ZBX-4104] fixed handle handling when executing scripts in Windows (rudolfs)
 - [ZBX-4091] removed unneeded linking for binaries (rudolfs)
 - [ZBX-4155] fixed .pid file locking not to allow multiple instances (rudolfs)
 - [ZBX-4056] fixed memory read access violation in Windows performance counters (rudolfs)
 - [ZBX-4177] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Richlv)
 - [ZBX-4085] fixed compilation issues for OS X Leopard (rudolfs)

Changes for 1.8.8

1.8.8rc3 was released as 1.8.8 without any changes

Changes for 1.8.8rc3

 - [ZBX-1909] fixed keyparser to allow keys like "key,{$USERMACRO}" (Vedmak)
 - [ZBX-4157] fixed possible truncating of queries while preparing a configuration data for sending to a proxy (Sasha)
 - [ZBX-4150] fixed processing of quoted function parameters (Sasha)

Changes for 1.8.8rc2

 - [ZBX-4141] fixed possible cycling of server/proxy processes after unsuccessful execution of SQL statement (Sasha)
 - [ZBX-4135] fixed item selection in trigger expression (Eduard)

Changes for 1.8.8rc1

 - [ZBX-3676] fixed item selection in bar report (Eduard)
 - [ZBX-4070] improved performance of handling of trigger functions (Sasha)
 - [ZBXNEXT-921] added option to show items without data in latest data (Vedmak)
 - [ZBX-2457] changed "type" to "ENGINE" in MySQL upgrade patches for MySQL 5.5 compatibility (Richlv)
 - [ZBX-4099] fixed possible crash when processing of functions sum(), min(), max() or diff() in triggers, aggregated checks or calculated items (Sasha)
 - [ZBX-3030] fixed event durations in monitoring (Vedmak,Eduard)
 - [ZBXNEXT-902] changed API search wildcard from "%" to "*" (Vedmak,Eduard)
 - [ZBX-3967] fixed alerter hang on long running alert scripts (Deniss)
 - [ZBX-3970] fixed proxy crash after database connection to postgresql is recovered (Deniss)