@@ -1,5 +1,6 @@
 Changes for 1.8.9rc1
 
+ - [ZBX-3829] fixed trigger dependency removed after template linked to host (Vedmak)
  - [ZBX-4131] fixed incorrect page shown after login (Vedmak)
  - [ZBX-4104] fixed handle handling when executing scripts in Windows (rudolfs)
  - [ZBX-4091] removed unneeded linking for binaries (rudolfs)
